--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@types/styled-components": "^5.1.12",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.3.5"
