--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "hex-rgb": "^5.0.0",
     "next": "11.1.0",
     "react": "17.0.2",
