--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "framer-motion": "^4.1.17",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "hex-rgb": "^5.0.0",
     "next": "11.1.0",
     "react": "17.0.2",
