--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
     "hex-rgb": "^5.0.0",
+    "lodash": "^4.17.21",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,6 +22,7 @@
     "styled-reset": "^4.3.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@types/react": "17.0.19",
     "@types/styled-components": "^5.1.12",
     "babel-plugin-inline-react-svg": "^2.0.1",
