--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.3.4"
